2012-04-28  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.ja, README.en: Remove descriptions about CVS and add
	description about the new Git repository.

2012-04-28  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.ja, README.en (Required environment): Modify for the new
	URLs of APEL and FLIM.
	(Mailing lists): Modify for the new Emacs-MIME mailing lists.

2010-11-12  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* semi-setup.el: Add setting for mime-mac.el if running with Mac
	OS X.

2010-11-11  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* SEMI-ELS (semi-modules-to-compile): Add `mime-mac' if running
	with Mac OS X.

	* mime-mac.el: New file.

	* mime-play.el (mime-save-content): Return filename.

2005-12-25  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* semi-def.el (mime-user-interface-product): Update to 1.14.7.

2012-04-27  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Experimental support of shr (Simple HTML Renderer) for html
	entity.
	* mime-shr.el: New file.

	* semi-setup.el (mime-html-previewer-alist): Likewise.

	* SEMI-ELS (top): Likewise.

2012-04-21  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-view-mailcap-files): Reverse the order of
	files.  Do not care of mime-mailcap-file's value.
	(mime-view-read-mailcap-files): The file indicated by
	mime-mailcap-file has the most priority.

2012-03-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-pgp-filtered-validities): New variable.
	(mime-edit-pgp-keys-valid-key): New function.
	(mime-edit-pgp-get-signers, mime-edit-encrypt-pgp-mime): Use them.
	Do not return invalid keys.
	Cf. https://github.com/ikazuhiro/semi-epg/pull/1

2011-07-16  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-make-encrypt-recipient-header): When
	mime-edit-pgp-encrypt-to-self is non-nil, add From field value to
	recipients.
	(mime-edit-encrypt-recipient-fields-list): Add "From".

	* mime-epg.el (mime-preview-application/*-signature): Result